# manta

./: .gitignore  CLAUDE.md  MANTA_CONTEXT.md  README.md  download_ahb.py  dump_log.py  dump_output.txt  dynamic_multiturn_solver.py  manta-questions-croissant.json  manta_eval.py  manta_questions.csv  manta_scorer.py  multidimensional_scorer.py  petri_audit.py  pyproject.toml  run_single.py  run_single_eval.py  sample_questions.py  samples.json  sync_questions_to_hf.py  tech_stack_and_skills.md  test_dynamic.py  token_report.py
.claude/: settings.local.json
ai_docs/: another-project-overview.md  project-overview.md  research-best-practices.md  uv-single-file-scripts.md
analysis/: correlation_awms_awvs.py  explore_log.py  export_transcripts.py  extract_eval_csvs.py
conformity_to_agentic_benchmarking_checklist/: conformity_to_agentic_benchmarking_checklist.md
conformity_to_betterbench_checklist/: conformity_to_betterbench_checklist.md
dataset/: analysis_report.py  fixed_turn2.json  manta_questions.csv  scenario_generation.py  scenario_quality_rules.md  sync_questions_to_hf.py
inspect_scout/: manta_scout.py  scout.yaml
inter_model_comparisons/: inter_model_comparisons.ipynb
logs/: 2026-02-10T22-57-03+00-00_manta-eval-2turn-batch1_Ks3ZCBjUmVzDPUx2x7pF28.eval  2026-02-10T22-57-25+00-00_manta-eval-2turn-batch2_joUD6WqAfrvTXHvBs9jD9T.eval  2026-02-10T22-57-49+00-00_manta-eval-2turn-batch3_YeXdYLf5z7jLTaBopT8uzM.eval  2026-02-10T22-58-14+00-00_manta-eval-3turn-batch1_QVdnZ5eQyLPPCKByU9cTHv.eval  2026-02-20T23-19-27+00-00_manta-2turn_YbFGF5aqwwQsh2EMrVrSVe.eval  (+106 more)
(+399 files in other folders)
