[project]
name = "manta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "gql<4",
    "inspect-ai>=0.3.212",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "openai>=2.8.1",
    "wandb>=0.26.1",
    "weave>=0.52.37",
    "inspect-wandb>=0.2.3",
    "together>=2.4.0",
    "inspect-petri==3.0.4",
    "modal>=1.4.2",
    "matplotlib>=3.10.8",
    "anthropic>=0.97.0",
    "xai-sdk>=1.11.0",
    "google-genai>=1.73.1",
    "mistralai>=2.4.3",
    "inspect-viz>=0.4.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
researchrepo = { git = "https://github.com/JoyeeChen/ResearchRepo.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.17.1",
    "uv>=0.9.14",
]
